<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/size_99">

    <View
        android:layout_width="@dimen/size_222"
        android:layout_height="4px"
        android:layout_marginTop="@dimen/size_36"
        android:background="@color/color3" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_30"
        android:text="@string/text_share_topic_title"
        android:textColor="@color/color3"
        android:textSize="@dimen/font_45" />

    <View
        android:layout_width="@dimen/size_222"
        android:layout_height="4px"
        android:layout_marginTop="@dimen/size_30"
        android:background="@color/color3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_60"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_share_bottom_sina_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_18"
                android:text="@string/text_share_sina"
                android:textColor="@color/color5"
                android:textSize="@dimen/font_30" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_108"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_share_bottom_wx_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_18"
                android:text="@string/text_share_wx"
                android:textColor="@color/color5"
                android:textSize="@dimen/font_30" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_wxfrends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_108"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_share_bottom_wxfriends_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_18"
                android:text="@string/text_share_wxfrends"
                android:textColor="@color/color5"
                android:textSize="@dimen/font_30" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_108"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_share_bottom_qq_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_18"
                android:text="@string/text_share_qq"
                android:textColor="@color/color5"
                android:textSize="@dimen/font_30" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_qzone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/size_108"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_share_bottom_qzone_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_18"
                android:text="@string/text_share_qzone"
                android:textColor="@color/color5"
                android:textSize="@dimen/font_30" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>